<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAndroidAPI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_rec_list_view">RecListViewActivity</string>
    <string name="title_swipe_refresh_layout_basic">SwipeRefreshLayoutBasic</string>
    <string name="title_test_activity">TestActivity</string>
    <string name="dialog_activity_text">  How To Use!! Test Text </string>
    <string name="dialog_activity_add">  Add  </string>
    <string name="dialog_activity_remove">  Remove  </string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="start_record_button">StartRecord</string>
    <string name="action_list">StartRecord</string>
    <string name="action_location_found">StartRecord</string>
    <string name="action_refresh">action_refresh</string>
    <string name="action_help">action_help</string>
    <string name="action_check_updates">action_check_updates</string>
    
    <string name="intro_message">
        <![CDATA[


            A basic sample which shows how to use SwipeRefreshLayout to add the \'swipe-to-refresh\'
            gesture to a View, enabling the ability to trigger a refresh from swiping down on the view.
            In this sample the View which can be refreshed is a ListView.


        ]]>
    </string>
    
</resources>